調整翻譯和修改字型和大小

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2165,7 +2165,7 @@ None - they are always stoned!","換一個燈泡需要多少石像鬼？
 4353,199688,This is an emote item.,Lua/EmoteItems.lua(00038),,,,,198395,This is an emote item. While performing emote animations you cannot move or attack.,This is an emote item. While performing emote animations you cannot move or attack.,這是一個表情物品。,,changed,,
 367,194283,Critical!,Lua/FloatingText.lua(00028),,,,,,Critical!,Critical!,暴擊！,,OK,,
 368,194283,<damage>,Lua/FloatingText.lua(00174),,,,,,<damage>,<damage>,<damage>,,OK,,
-369,194283,<damage> Deflect!,Lua/FloatingText.lua(00177),,,,,,<damage> Deflect!,<damage> Deflect!,<damage>擋開！,,OK,,
+369,194283,<damage> Deflect!,Lua/FloatingText.lua(00177),,,,,,<damage> Deflect!,<damage> Deflect!,<damage>擊偏！,,OK,,
 370,194283,<damage> Overkill!,Lua/FloatingText.lua(00184),,,,,,<damage> Overkill!,<damage> Overkill!,<damage>絕殺！,,OK,,
 371,194283,"Kelvingrove, 10, aa",Lua/FontStyles.lua(00003),,HUDTargetName,,,,"Kelvingrove, 10, aa","Kelvingrove, 10, aa","Kelvingrove, 10, aa",,OK,,
 372,194283,"Kelvingrove, 10, aa",Lua/FontStyles.lua(00004),,HUDTargetPlayerName,,,,"Kelvingrove, 10, aa","Kelvingrove, 10, aa","Kelvingrove, 10, aa",,OK,,
@@ -2209,7 +2209,7 @@ None - they are always stoned!","換一個燈泡需要多少石像鬼？
 403,195390,"SchemeBk, 15, aa",Lua/FontStyles.lua(00048),,MapHint,,,,"SchemeBk, 12, aa","SchemeBk, 12, aa","SchemeBk, 15, aa",,OK,,
 404,195390,"SchemeBk, 13, aa",Lua/FontStyles.lua(00049),,MapDescription,,,,"SchemeBk, 10, aa","SchemeBk, 10, aa","SchemeBk, 13, aa",,OK,,
 405,194283,"Kelvingrove, 18, aa",Lua/FontStyles.lua(00052),,MessageTitle,,,,"Kelvingrove, 18, aa","Kelvingrove, 18, aa","Kelvingrove, 18, aa",,OK,,
-406,195390,"SchemeBk, 13, aa",Lua/FontStyles.lua(00053),,MessageDescr,,,,"SchemeBk, 10, aa","SchemeBk, 10, aa","SchemeBk, 13, aa",,OK,,
+406,195390,"SchemeBk, 13, aa",Lua/FontStyles.lua(00053),,MessageDescr,,,,"SchemeBk, 10, aa","SchemeBk, 10, aa","SchemeBk, 15, aa",,OK,,
 407,194283,"Kelvingrove, 16, aa",Lua/FontStyles.lua(00056),,LevelUpTitle,,,,"Kelvingrove, 16, aa","Kelvingrove, 16, aa","Kelvingrove, 16, aa",,OK,,
 408,194283,"Kelvingrove, 40, aa",Lua/FontStyles.lua(00057),,LevelUpBigTitle,,,,"Kelvingrove, 40, aa","Kelvingrove, 40, aa","Kelvingrove, 40, aa",,OK,,
 409,195390,"SchemeBk, 15, aa",Lua/FontStyles.lua(00058),,LevelUpDescr,,,,"SchemeBk, 12, aa","SchemeBk, 12, aa","SchemeBk, 15, aa",,OK,,
@@ -2259,15 +2259,15 @@ None - they are always stoned!","換一個燈泡需要多少石像鬼？
 452,195390,"SchemeBk, 8, aa",Lua/FontStyles.lua(00121),,Shortcut,,,,"SchemeBk, 5, aa","SchemeBk, 5, aa","SchemeBk, 8, aa",,OK,,
 453,195390,"SchemeBk, 17, aa",Lua/FontStyles.lua(00122),,Conversation,,,,"SchemeBk, 14, aa","SchemeBk, 14, aa","SchemeBk, 17, aa",,OK,,
 454,194283,"Kelvingrove, 18, aa",Lua/FontStyles.lua(00123),,ConversationName,,,,"Kelvingrove, 18, aa","Kelvingrove, 18, aa","Kelvingrove, 18, aa",,OK,,
-455,194283,"Hackensack-Regular, 64, aa",Lua/FontStyles.lua(00125),,DamageFloating,,,,"Hackensack-Regular, 64, aa","Hackensack-Regular, 64, aa","Hackensack-Regular, 64, aa",,OK,,
-456,194283,"Hackensack-Regular, 96, aa",Lua/FontStyles.lua(00126),,DamageFloatingCritical,,,,"Hackensack-Regular, 96, aa","Hackensack-Regular, 96, aa","Hackensack-Regular, 96, aa",,OK,,
-457,194283,"Hackensack-Regular, 64, aa",Lua/FontStyles.lua(00127),,HeroDamageFloating,,,,"Hackensack-Regular, 64, aa","Hackensack-Regular, 64, aa","Hackensack-Regular, 64, aa",,OK,,
-458,194283,"Hackensack-Regular, 96, aa",Lua/FontStyles.lua(00128),,HeroDamageFloatingCrit,,,,"Hackensack-Regular, 96, aa","Hackensack-Regular, 96, aa","Hackensack-Regular, 96, aa",,OK,,
-459,194283,"Hackensack-Regular, 56, aa",Lua/FontStyles.lua(00129),,TextFloating,,,,"Hackensack-Regular, 56, aa","Hackensack-Regular, 56, aa","Hackensack-Regular, 56, aa",,OK,,
-460,194283,"Hackensack-Regular, 56, aa",Lua/FontStyles.lua(00130),,HeroNameFloating,,,,"Hackensack-Regular, 56, aa","Hackensack-Regular, 56, aa","Hackensack-Regular, 56, aa",,OK,,
+455,194283,"Hackensack-Regular, 64, aa",Lua/FontStyles.lua(00125),,DamageFloating,,,,"Hackensack-Regular, 64, aa","Hackensack-Regular, 64, aa","Kelvingrove, 64, aa",,OK,,
+456,194283,"Hackensack-Regular, 96, aa",Lua/FontStyles.lua(00126),,DamageFloatingCritical,,,,"Hackensack-Regular, 96, aa","Hackensack-Regular, 96, aa","Kelvingrove, 96, aa",,OK,,
+457,194283,"Hackensack-Regular, 64, aa",Lua/FontStyles.lua(00127),,HeroDamageFloating,,,,"Hackensack-Regular, 64, aa","Hackensack-Regular, 64, aa","Kelvingrove, 64, aa",,OK,,
+458,194283,"Hackensack-Regular, 96, aa",Lua/FontStyles.lua(00128),,HeroDamageFloatingCrit,,,,"Hackensack-Regular, 96, aa","Hackensack-Regular, 96, aa","Kelvingrove, 96, aa",,OK,,
+459,194283,"Hackensack-Regular, 56, aa",Lua/FontStyles.lua(00129),,TextFloating,,,,"Hackensack-Regular, 56, aa","Hackensack-Regular, 56, aa","Kelvingrove, 56, aa",,OK,,
+460,194283,"Hackensack-Regular, 56, aa",Lua/FontStyles.lua(00130),,HeroNameFloating,,,,"Hackensack-Regular, 56, aa","Hackensack-Regular, 56, aa","Kelvingrove, 56, aa",,OK,,
 461,195390,"SchemeBk, 15, aa",Lua/FontStyles.lua(00131),,Rollover,,,,"SchemeBk, 12, aa","SchemeBk, 12, aa","SchemeBk, 15, aa",,OK,,
-462,194283,"Hackensack-Regular, 48, aa",Lua/FontStyles.lua(00132),,GoldPickup,,,,"Hackensack-Regular, 48, aa","Hackensack-Regular, 48, aa","Hackensack-Regular, 48, aa",,OK,,
-463,194283,"Hackensack-Regular, 48, aa",Lua/FontStyles.lua(00133),,XPPickup,,,,"Hackensack-Regular, 48, aa","Hackensack-Regular, 48, aa","Hackensack-Regular, 48, aa",,OK,,
+462,194283,"Hackensack-Regular, 48, aa",Lua/FontStyles.lua(00132),,GoldPickup,,,,"Hackensack-Regular, 48, aa","Hackensack-Regular, 48, aa","Kelvingrove, 48, aa",,OK,,
+463,194283,"Hackensack-Regular, 48, aa",Lua/FontStyles.lua(00133),,XPPickup,,,,"Hackensack-Regular, 48, aa","Hackensack-Regular, 48, aa","Kelvingrove, 48, aa",,OK,,
 464,194283,"Kelvingrove, 22, aa",Lua/FontStyles.lua(00135),,Pause,,,,"Kelvingrove, 22, aa","Kelvingrove, 22, aa","Kelvingrove, 22, aa",,OK,,
 3457,195390,"SchemeBk, 11, aa",Lua/FontStyles.lua(00136),,Subtitles,,,,"SchemeBk, 8, aa","SchemeBk, 8, aa","SchemeBk, 11, aa",,OK,,
 465,195390,"SchemeBk, 15, aa",Lua/FontStyles.lua(00139),,OnlineConnecting,,,,"SchemeBk, 12, aa","SchemeBk, 12, aa","SchemeBk, 15, aa",,OK,,
@@ -2284,7 +2284,7 @@ None - they are always stoned!","換一個燈泡需要多少石像鬼？
 476,199130,"Kelvingrove, 28, aa",Lua/FontStyles.lua(00152),,HeroRespawnCounter,,,,"Kelvingrove, 32, aa","Kelvingrove, 32, aa","Kelvingrove, 28, aa",,OK,,
 477,194283,"Kelvingrove, 14, aa",Lua/FontStyles.lua(00155),,LoadingTips,,,,"Kelvingrove, 14, aa","Kelvingrove, 14, aa","Kelvingrove, 14, aa",,OK,,
 4181,196416,"Kelvingrove, 14, aa",Lua/FontStyles.lua(00157),,SkipHint,,,,,,"Kelvingrove, 14, aa",,OK,,
-478,196416,"Kelvingrove, 16, aa",Lua/FontStyles.lua(00158),,CutsceneSubtitles,,,,"Kelvingrove, 14, aa","Kelvingrove, 14, aa","Kelvingrove, 16, aa",,OK,,
+478,196416,"Kelvingrove, 16, aa",Lua/FontStyles.lua(00158),,CutsceneSubtitles,,,,"Kelvingrove, 14, aa","Kelvingrove, 14, aa","Kelvingrove, 24, aa",,OK,,
 479,194283,Basic Attack,Lua/GameControls.lua(00191),,,,,,Basic Attack,Basic Attack,基本攻擊,,OK,,
 480,194283,Special Attack 1,Lua/GameControls.lua(00192),,,,,,Special Attack 1,Special Attack 1,招式1,,OK,,
 481,194283,Special Attack 2,Lua/GameControls.lua(00193),,,,,,Special Attack 2,Special Attack 2,招式2,,OK,,
@@ -2404,7 +2404,7 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 571,194283,"Congratulations! Your Health pool has increased, allowing you to endure more damage.",Lua/LevelRewards.lua(00637),,,,,,"Congratulations! Your Health pool has increased, allowing you to endure more damage.","Congratulations! Your Health pool has increased, allowing you to endure more damage.",恭喜！你的生命力提升了，可讓你承受更大傷害。,,OK,,
 566,194283,+<number> Destiny Points,Lua/LevelRewards.lua(00651),,,,,,+<number> Destiny Points,+<number> Destiny Points,+<number>命運點,,OK,,
 567,194283,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,Lua/LevelRewards.lua(00652),,,,,,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,你現在可以裝備更強力的命運牌了。所有裝備的牌所消耗的命運點不能超過你的總命運點。,,OK,,
-586,194283,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,Lua/LoadingTips.lua(00007),,,,,,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> 防禦有機率擋開攻擊，並顯著降低所受傷害。,,OK,,
+586,194283,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,Lua/LoadingTips.lua(00007),,,,,,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,<armor_icon> 防禦有機率使攻擊擊偏，並顯著降低所受傷害。,,OK,,
 587,194283,<armor_penetration_icon> Armor penetration reduces the Armor of the target,Lua/LoadingTips.lua(00008),,,,,,<armor_penetration_icon> Armor penetration reduces the Armor of the target,<armor_penetration_icon> Armor penetration reduces the Armor of the target,<armor_penetration_icon> 護甲穿透會降低目標的防禦。,,OK,,
 588,194283,<damage_icon> The amount of damage dealt on hit,Lua/LoadingTips.lua(00009),,,,,,<damage_icon> The amount of damage dealt on hit,<damage_icon> The amount of damage dealt on hit,<damage_icon> 攻擊造成的傷害。,,OK,,
 589,194283,<crit_chance_icon> Chance to score critical damage on hit,Lua/LoadingTips.lua(00010),,,,,,<crit_chance_icon> Chance to score critical damage on hit,<crit_chance_icon> Chance to score critical damage on hit,<crit_chance_icon> 攻擊造成暴擊的機率。,,OK,,
@@ -2827,8 +2827,8 @@ Tag <UseDefaultEmote> not present in original text",
 778,194283,Eternal <name>,Lua/MonsterData.lua(02276),,masculine,,,,Eternal <name>,Eternal <name>,永生<name>,,OK,,
 3795,195189,Eternal <name>,Lua/MonsterData.lua(02277),,feminine,,,,,,永生<name>,,OK,,
 3796,195189,Eternal <name>,Lua/MonsterData.lua(02278),,neuter,,,,,,永生<name>,,OK,,
-779,194283,Armored - Regeneration - Immune to Crit Damage,Lua/MonsterData.lua(02284),,,,,,Armored - Regeneration - Immune to Crit Damage,Armored - Regeneration - Immune to Crit Damage,裝甲化、生命再生、免疫暴擊傷害,,OK,,
-780,194283,+450% Health - +190% Damage - Armored - Regeneration - Immune to Critical Damage,Lua/MonsterData.lua(02285),,,,,,+450% Health - +190% Damage - Armored - Regeneration - Immune to Critical Damage,+450% Health - +190% Damage - Armored - Regeneration - Immune to Critical Damage,+450%生命、+190%傷害、裝甲化、生命再生、免疫暴擊傷害,,OK,,
+779,194283,Armored - Regeneration - Immune to Crit Damage,Lua/MonsterData.lua(02284),,,,,,Armored - Regeneration - Immune to Crit Damage,Armored - Regeneration - Immune to Crit Damage,裝甲、生命再生、免疫暴擊傷害,,OK,,
+780,194283,+450% Health - +190% Damage - Armored - Regeneration - Immune to Critical Damage,Lua/MonsterData.lua(02285),,,,,,+450% Health - +190% Damage - Armored - Regeneration - Immune to Critical Damage,+450% Health - +190% Damage - Armored - Regeneration - Immune to Critical Damage,+450%生命、+190%傷害、裝甲、生命再生、免疫暴擊傷害,,OK,,
 781,194283,Regenerating <name>,Lua/MonsterData.lua(02291),,masculine,,,,Regenerating <name>,Regenerating <name>,再生<name>,,OK,,
 3797,195189,Regenerating <name>,Lua/MonsterData.lua(02292),,feminine,,,,,,再生<name>,,OK,,
 3798,195189,Regenerating <name>,Lua/MonsterData.lua(02293),,neuter,,,,,,再生<name>,,OK,,
@@ -2842,22 +2842,22 @@ Tag <UseDefaultEmote> not present in original text",
 787,194283,Hardy <name>,Lua/MonsterData.lua(02316),,masculine,,,,Hardy <name>,Hardy <name>,堅硬<name>,,OK,,
 3801,195189,Hardy <name>,Lua/MonsterData.lua(02317),,feminine,,,,,,堅硬<name>,,OK,,
 3802,195189,Hardy <name>,Lua/MonsterData.lua(02318),,neuter,,,,,,堅硬<name>,,OK,,
-788,194283,Armored,Lua/MonsterData.lua(02322),,,,,,Armored,Armored,裝甲化,,OK,,
+788,194283,Armored,Lua/MonsterData.lua(02322),,,,,,Armored,Armored,裝甲,,OK,,
 789,194283,+65% Health - +30% Damage - 75 Armor,Lua/MonsterData.lua(02323),,,,,,+65% Health - +30% Damage - 75 Armor,+65% Health - +30% Damage - 75 Armor,+65%生命、+30%傷害、75防禦,,OK,,
 790,194283,Armored <name>,Lua/MonsterData.lua(02327),,masculine,,,,Armored <name>,Armored <name>,重裝<name>,,OK,,
 3803,195189,Armored <name>,Lua/MonsterData.lua(02328),,feminine,,,,,,重裝<name>,,OK,,
 3804,195189,Armored <name>,Lua/MonsterData.lua(02329),,neuter,,,,,,重裝<name>,,OK,,
-791,194283,Armored,Lua/MonsterData.lua(02333),,,,,,Armored,Armored,裝甲化,,OK,,
+791,194283,Armored,Lua/MonsterData.lua(02333),,,,,,Armored,Armored,裝甲,,OK,,
 792,194283,+110% Health - +60% Damage - 150 Armor,Lua/MonsterData.lua(02334),,,,,,+110% Health - +60% Damage - 150 Armor,+110% Health - +60% Damage - 150 Armor,+110%生命、+60%傷害、150防禦,,OK,,
 793,194283,Bulletproof <name>,Lua/MonsterData.lua(02338),,masculine,,,,Bulletproof <name>,Bulletproof <name>,防彈<name>,,OK,,
 3805,195189,Bulletproof <name>,Lua/MonsterData.lua(02339),,feminine,,,,,,防彈<name>,,OK,,
 3806,195189,Bulletproof <name>,Lua/MonsterData.lua(02340),,neuter,,,,,,防彈<name>,,OK,,
-794,194283,Armored - Immune to Critical Damage,Lua/MonsterData.lua(02345),,,,,,Armored - Immune to Critical Damage,Armored - Immune to Critical Damage,裝甲化、免疫暴擊傷害,,OK,,
+794,194283,Armored - Immune to Critical Damage,Lua/MonsterData.lua(02345),,,,,,Armored - Immune to Critical Damage,Armored - Immune to Critical Damage,裝甲、免疫暴擊傷害,,OK,,
 795,194283,+200% Health - +90% Damage - 200 Armor - Immune to Critical Damage,Lua/MonsterData.lua(02346),,,,,,+200% Health - +90% Damage - 200 Armor - Immune to Critical Damage,+200% Health - +90% Damage - 200 Armor - Immune to Critical Damage,+200%生命、+90%傷害、200防禦、免疫暴擊傷害,,OK,,
 796,194283,Ironclad <name>,Lua/MonsterData.lua(02350),,masculine,,,,Ironclad <name>,Ironclad <name>,鐵壁<name>,,OK,,
 3807,195189,Ironclad <name>,Lua/MonsterData.lua(02351),,feminine,,,,,,鐵壁<name>,,OK,,
 3808,195189,Ironclad <name>,Lua/MonsterData.lua(02352),,neuter,,,,,,鐵壁<name>,,OK,,
-797,194283,Armored - Life Steal,Lua/MonsterData.lua(02357),,,,,,Armored - Life Steal,Armored - Life Steal,裝甲化、生命竊取,,OK,,
+797,194283,Armored - Life Steal,Lua/MonsterData.lua(02357),,,,,,Armored - Life Steal,Armored - Life Steal,裝甲、生命竊取,,OK,,
 798,194283,+320% Health - +150% Damage - 300 Armor - Life Steal,Lua/MonsterData.lua(02358),,,,,,+320% Health - +150% Damage - 300 Armor - Life Steal,+320% Health - +150% Damage - 300 Armor - Life Steal,+320%生命、+150%傷害、300防禦、生命竊取,,OK,,
 799,194283,Hungering <name>,Lua/MonsterData.lua(02362),,masculine,,,,Hungering <name>,Hungering <name>,飢餓<name>,,OK,,
 3809,195189,Hungering <name>,Lua/MonsterData.lua(02363),,feminine,,,,,,飢餓<name>,,OK,,
@@ -3654,7 +3654,7 @@ Recipe: <rune_icon_1><rune_icon_2><rune_icon_3>",Lua/Transmutation.lua(00236),,,
 1098,197009,Renown Level Reward: Gift Box,Lua/UI/BaseInventory.lua(00853),,,,,,Renown Level Reward: <reward> Gold,Renown Level Reward: <reward> Gold,聲望等級獎勵：禮物箱,,OK,,
 1099,194283,Health,Lua/UI/BaseInventory.lua(00921),,,,,,Health,Health,生命,,OK,,
 1100,194283,<armor>,Lua/UI/BaseInventory.lua(00925),,,,,,<armor>,<armor>,<armor>,,OK,,
-1101,194283,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Lua/UI/BaseInventory.lua(00926),,,,,,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),防禦有機率擋開攻擊並降低所受傷害（但無法抵擋其它效果）,,OK,,
+1101,194283,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Lua/UI/BaseInventory.lua(00926),,,,,,Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),Armor gives a chance to deflect attacks and reduce incoming damage (but not other effects),防禦有機率使攻擊擊偏並降低所受傷害（但無法抵擋其它效果）,,OK,,
 1102,194283,-,Lua/UI/BaseInventory.lua(00930),,,,,,-,-,-,,OK,,
 1103,194283,"<armor_pen1>
 <armor_pen2>",Lua/UI/BaseInventory.lua(00930),,,,,,"<armor_pen1>
@@ -4395,7 +4395,7 @@ Check your Codex to see the standard recipes. Some recipes are secret and will n
 1537,197294,Feedback,Lua/UIDesignerData/EABugReportDlg.lua(00057),,default,,,,Bug Report,Bug Report,回報,,OK,,
 1538,194283,Summary:,Lua/UIDesignerData/EABugReportDlg.lua(00095),,default,,,,Summary:,Summary:,概要：,,OK,,
 1539,194283,Description:,Lua/UIDesignerData/EABugReportDlg.lua(00116),,default,,,,Description:,Description:,描述：,,OK,,
-1540,194283,"Click to draw, right-click to clear",Lua/UIDesignerData/EABugReportDlg.lua(00143),,default,,,,"Click to draw, right-click to clear","Click to draw, right-click to clear",滑鼠左鍵畫圖，滑鼠右鍵清除,,OK,,
+1540,194283,"Click to draw, right-click to clear",Lua/UIDesignerData/EABugReportDlg.lua(00143),,default,,,,"Click to draw, right-click to clear","Click to draw, right-click to clear",滑鼠左鍵畫圖，滑鼠右鍵清除。,,OK,,
 1541,194283,Cancel,Lua/UIDesignerData/EABugReportDlg.lua(00156),,default,,,,Cancel,Cancel,取消,,OK,,
 1542,194283,OK,Lua/UIDesignerData/EABugReportDlg.lua(00170),,default,,,,OK,OK,確定,,OK,,
 1543,197294,May we contact you for further info? Enter your email address here:,Lua/UIDesignerData/EABugReportDlg.lua(00186),,default,,,,May we contact you for further info about that bug report? Enter your email address here:,May we contact you for further info about that bug report? Enter your email address here:,我們可以聯繫您，取得進一步資訊嗎？在此輸入您的電子郵件地址：,,OK,,
