潤飾翻譯和去除多餘空白

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -4,7 +4,7 @@ ID,Revision,Text,Location,Section,Context,Actor,Voice Actor,Old Revision,Old Tex
 1000007,194283,Borderless,CommonLua/Core/EngineOptions.lua(00411),,Options dialog resolution setting,,,,,,視窗化全螢幕,,OK,,
 1000008,194283,Fullscreen,CommonLua/Core/EngineOptions.lua(00416),,Options dialog resolution setting,,,,,,全螢幕,,OK,,
 1000009,194283,Windowed,CommonLua/Core/EngineOptions.lua(00421),,Options dialog resolution setting,,,,,,視窗,,OK,,
-1000010,194283,<arg1> x <arg2>,CommonLua/Core/EngineOptions.lua(00595),,,,,,,,<arg1> x <arg2>,,OK,,
+1000010,194283,<arg1> x <arg2>,CommonLua/Core/EngineOptions.lua(00595),,,,,,,,<arg1>x<arg2>,,OK,,
 1000011,194283,Off,CommonLua/Core/EngineOptions.lua(00631),,,,,,,,關閉,,OK,,
 1000012,194283,Easy,CommonLua/Core/EngineOptions.lua(00733),,,,,,,,簡單,,OK,,
 1000013,194283,Medium,CommonLua/Core/EngineOptions.lua(00734),,,,,,,,中等,,OK,,
@@ -1486,7 +1486,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 3454,194283,Discover the past of Victor Vran,Data/World.lua(00018),,World World2 Description,,,,,,揭開維克多．弗蘭的過去,,OK,,
 3455,194283,The Killing Fields,Data/World.lua(00028),,World World3 DisplayName,,,,,,殺戮戰場,,OK,,
 3456,194283,PvP Arena,Data/World.lua(00029),,World World3 Description,,,,,,對戰競技場,,OK,,
-3491,196259,Achievement Unlocked: <achievement_image> <display_name>,Lua/Achievements.lua(00080),,,,,,,,已解鎖成就：<achievement_image> <display_name>,,OK,,
+3491,196259,Achievement Unlocked: <achievement_image> <display_name>,Lua/Achievements.lua(00080),,,,,,,,已解鎖成就：<achievement_image><display_name>,,OK,,
 1,194283,Fire Bomb,Lua/Bomb.lua(00068),,,,,,,,火焰炸彈,,OK,,
 2,194283,Inflicts <number> damage to all enemies within <radius>m,Lua/Bomb.lua(00079),,,,,,,,對<radius>公尺半徑內的敵人造成<number>傷害。,,OK,,
 3,194283,Frost Bomb,Lua/Bomb.lua(00095),,,,,,,,寒氣炸彈,,OK,,
@@ -2139,24 +2139,24 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 571,194283,"Congratulations! Your Health pool has increased, allowing you to endure more damage.",Lua/LevelRewards.lua(00637),,,,,,,,恭喜！你的生命力提升了，可讓你承受更大傷害。,,OK,,
 566,194283,+<number> Destiny Points,Lua/LevelRewards.lua(00651),,,,,,,,+<number>命運點,,OK,,
 567,194283,You can now equip more powerful Destiny Cards. The Destiny Points cost of all equipped cards cannot exceed your total DP.,Lua/LevelRewards.lua(00652),,,,,,,,你現在可以裝備更強力的命運牌了。所有裝備的牌所消耗的命運點不能超過你的總命運點。,,OK,,
-586,194283,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,Lua/LoadingTips.lua(00007),,,,,,,,<armor_icon> 防禦有機率使攻擊擊偏，並顯著降低所受傷害。,,OK,,
-587,194283,<armor_penetration_icon> Armor penetration reduces the Armor of the target,Lua/LoadingTips.lua(00008),,,,,,,,<armor_penetration_icon> 護甲穿透會降低目標的防禦。,,OK,,
-588,194283,<damage_icon> The amount of damage dealt on hit,Lua/LoadingTips.lua(00009),,,,,,,,<damage_icon> 攻擊造成的傷害。,,OK,,
-589,194283,<crit_chance_icon> Chance to score critical damage on hit,Lua/LoadingTips.lua(00010),,,,,,,,<crit_chance_icon> 攻擊造成暴擊的機率。,,OK,,
-590,194283,<crit_damage_icon> The amount of additional damage dealt on crit,Lua/LoadingTips.lua(00011),,,,,,,,<crit_damage_icon> 暴擊造成的傷害。,,OK,,
-591,194283,Hold <CameraRotate_Mouse> to rotate the camera,Lua/LoadingTips.lua(00014),,,,,,,,按住 <CameraRotate_Mouse> 旋轉鏡頭。,,OK,,
-592,194283,<RS> to rotate the camera,Lua/LoadingTips.lua(00015),,,,,,,,<RS> 旋轉鏡頭。,,OK,,
-593,194283,Hold <Attack1> to continuously attack your target,Lua/LoadingTips.lua(00018),,,,,,,,按住 <Attack1> 持續攻擊目標。,,OK,,
-594,194283,Hold <X> to continuously attack your target,Lua/LoadingTips.lua(00019),,,,,,,,按住 <X> 持續攻擊目標。,,OK,,
-595,194283,Press <Attack1> while mid-air to push back all nearby enemies,Lua/LoadingTips.lua(00022),,,,,,,,在空中按 <Attack1> 震退附近所有敵人。,,OK,,
-596,194283,Press <X> while mid-air to push back all nearby enemies,Lua/LoadingTips.lua(00023),,,,,,,,在空中按 <X> 震退附近所有敵人。,,OK,,
-597,194283,Press <lightgreen><MapProgress></lightgreen> to see the current map and its Challenges,Lua/LoadingTips.lua(00026),,,,,,,,按 <lightgreen><MapProgress></lightgreen> 查看地圖和挑戰。,,OK,,
-598,194283,Tap <RS> to see the current map and its Challenges,Lua/LoadingTips.lua(00027),,,,,,,,按 <RS> 查看地圖和挑戰。,,OK,,
-599,194283,Use <SwitchWeapon> to switch between your equipped weapons,Lua/LoadingTips.lua(00030),,,,,,,,使用 <SwitchWeapon> 切換裝備的武器。,,OK,,
-600,194283,Use <RB> to switch between your equipped weapons,Lua/LoadingTips.lua(00031),,,,,,,,使用 <RB> 切換裝備的武器。,,OK,,
+586,194283,<armor_icon> Armor gives a chance to deflect incoming attacks and significantly reduce their damage,Lua/LoadingTips.lua(00007),,,,,,,,<armor_icon>防禦有機率使攻擊擊偏，並顯著降低所受傷害。,,OK,,
+587,194283,<armor_penetration_icon> Armor penetration reduces the Armor of the target,Lua/LoadingTips.lua(00008),,,,,,,,<armor_penetration_icon>護甲穿透會降低目標的防禦。,,OK,,
+588,194283,<damage_icon> The amount of damage dealt on hit,Lua/LoadingTips.lua(00009),,,,,,,,<damage_icon>攻擊造成的傷害。,,OK,,
+589,194283,<crit_chance_icon> Chance to score critical damage on hit,Lua/LoadingTips.lua(00010),,,,,,,,<crit_chance_icon>攻擊造成暴擊的機率。,,OK,,
+590,194283,<crit_damage_icon> The amount of additional damage dealt on crit,Lua/LoadingTips.lua(00011),,,,,,,,<crit_damage_icon>暴擊造成的傷害。,,OK,,
+591,194283,Hold <CameraRotate_Mouse> to rotate the camera,Lua/LoadingTips.lua(00014),,,,,,,,按住<CameraRotate_Mouse>旋轉鏡頭。,,OK,,
+592,194283,<RS> to rotate the camera,Lua/LoadingTips.lua(00015),,,,,,,,<RS>旋轉鏡頭。,,OK,,
+593,194283,Hold <Attack1> to continuously attack your target,Lua/LoadingTips.lua(00018),,,,,,,,按住<Attack1>持續攻擊目標。,,OK,,
+594,194283,Hold <X> to continuously attack your target,Lua/LoadingTips.lua(00019),,,,,,,,按住<X>持續攻擊目標。,,OK,,
+595,194283,Press <Attack1> while mid-air to push back all nearby enemies,Lua/LoadingTips.lua(00022),,,,,,,,在空中按<Attack1>震退附近所有敵人。,,OK,,
+596,194283,Press <X> while mid-air to push back all nearby enemies,Lua/LoadingTips.lua(00023),,,,,,,,在空中按<X>震退附近所有敵人。,,OK,,
+597,194283,Press <lightgreen><MapProgress></lightgreen> to see the current map and its Challenges,Lua/LoadingTips.lua(00026),,,,,,,,按<lightgreen><MapProgress></lightgreen>查看地圖和挑戰。,,OK,,
+598,194283,Tap <RS> to see the current map and its Challenges,Lua/LoadingTips.lua(00027),,,,,,,,按<RS>查看地圖和挑戰。,,OK,,
+599,194283,Use <SwitchWeapon> to switch between your equipped weapons,Lua/LoadingTips.lua(00030),,,,,,,,使用<SwitchWeapon>切換裝備的武器。,,OK,,
+600,194283,Use <RB> to switch between your equipped weapons,Lua/LoadingTips.lua(00031),,,,,,,,使用<RB>切換裝備的武器。,,OK,,
 601,194283,Some Demon Powers can be targeted by holding the button when casting them,Lua/LoadingTips.lua(00034),,,,,,,,某些惡魔之力可以在施展時按住按鈕以定位目標。,,OK,,
 602,194283,You can jump or dodge to cancel your attacks,Lua/LoadingTips.lua(00035),,,,,,,,你可以用跳躍或翻滾來取消攻擊。,,OK,,
-603,194283,Hold <ForceAttack> to force attack,Lua/LoadingTips.lua(00036),,,,,,,,按住 <ForceAttack> 強制攻擊。,,OK,,
+603,194283,Hold <ForceAttack> to force attack,Lua/LoadingTips.lua(00036),,,,,,,,按住<ForceAttack>強制攻擊。,,OK,,
 604,194283,All Rapiers have high Armor Penetration,Lua/LoadingTips.lua(00038),,,,,,,,細劍具有高護甲穿透。,,OK,,
 605,194283,The special attacks of the Sword have additional effects on crit,Lua/LoadingTips.lua(00040),,,,,,,,長劍的招式暴擊時會附加狀態。,,OK,,
 606,194283,The Hammer's Smash special attack grants you Life Steal,Lua/LoadingTips.lua(00041),,,,,,,,戰鎚的粉碎擊具有生命竊取效果。,,OK,,
@@ -2181,7 +2181,7 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 624,194283,You need Overdrive to cast Demon Powers,Lua/LoadingTips.lua(00062),,,,,,,,你需要超能來施展惡魔之力。,,OK,,
 625,194283,"Deal damage to monsters to gain Overdrive. The more damage you do, the more Overdrive you gain",Lua/LoadingTips.lua(00063),,,,,,,,對怪物造成傷害可凝聚超能。傷害越高，凝聚的超能越多。,,OK,,
 626,194283,In multiplayer you share challenge progress only with those in range,Lua/LoadingTips.lua(00065),,,,,,,,多人遊戲時，你只與範圍內的玩家共享挑戰進度。,,OK,,
-4138,196097,Press F1 to notify us about any issues you have encountered while playing,Lua/LoadingTips.lua(00066),,,,,,,,按 F1 回報你在遊戲中遇到的任何問題。,,OK,,
+4138,196097,Press F1 to notify us about any issues you have encountered while playing,Lua/LoadingTips.lua(00066),,,,,,,,按F1回報你在遊戲中遇到的任何問題。,,OK,,
 4178,196259,Your game progress is saved automatically,Lua/LoadingTips.lua(00067),,,,,,,,遊戲進度會自動儲存。,,OK,,
 4026,195942,Transmutation allows you to add new properties to your existing weapons,Lua/LoadingTips.lua(00069),,,,,,,,合成能讓你附加新屬性到已有的武器上。,,OK,,
 4027,195942,You can maximize the characteristics of your items using the transmutation system,Lua/LoadingTips.lua(00070),,,,,,,,你可以利用合成系統充分發揮你物品的特性。,,OK,,
@@ -6021,7 +6021,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 3322,194283,Not a human soul in sight.,Data/Scenario/Banters_Tutorial.lua(00019),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,完全不見半點人影。,,OK,,
 3323,194283,Monsters have claimed the streets.,Data/Scenario/Banters_Tutorial.lua(00030),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,怪物們占據了大街小巷。,,OK,,
 3324,194283,Dim lights shine through the dusty windows.,Data/Scenario/Banters_Tutorial.lua(00034),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,布滿灰塵的窗戶透出著黯淡的微光。,,OK,,
-3325,194409,I wonder what horrors hide behind them.,Data/Scenario/Banters_Tutorial.lua(00041),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,不知道它們身後到底隱藏著怎樣的恐懼。,,OK,,
+3325,194409,I wonder what horrors hide behind them.,Data/Scenario/Banters_Tutorial.lua(00041),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,不曉得牠們背後隱藏著什麼樣的恐怖。,,OK,,
 3326,194283,"I sense something hidden, something far more sinister than the monsters.",Data/Scenario/Banters_Tutorial.lua(00056),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,我能感覺到，某種遠比怪物更險惡的東西。,,OK,,
 3327,194283,Something faint. Like a whisper in the back of my mind.,Data/Scenario/Banters_Tutorial.lua(00060),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,幽幽地，像是我腦海中的耳語。,,OK,,
 3328,194283,Hello-o-o?,Data/Scenario/Banters_Tutorial.lua(00078),Act0 01 Tutorial Banters,,Voice,Voice,,,,哈囉～？,,OK,,
@@ -6062,7 +6062,7 @@ Casting a demon power while wielding a Tome grants <condition_name>.<condition_d
 3363,194283,I've fought and slain many monsters in my line of work.,Data/Scenario/Banters_Tutorial.lua(00363),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,我做獵人以來殺過的怪物不計其數。,,OK,,
 3364,196015,The ones that talk are  <emphasis>always the worst.,Data/Scenario/Banters_Tutorial.lua(00367),Act0 01 Tutorial Banters,,Victor Vran,Victor Vran,,,,會說話的傢伙，<emphasis>永遠是最棘手的。,,OK,,
 2869,194323,<surprised>There are survivors after all this time!,Data/Scenario/Banters_Hub.lua(00015),Act0 02 Victor Enters Hub,,Victor Vran,Victor Vran,,,,<surprised>過了那麼久竟然還有生還者！,,OK,,
-2870,194283,Castle Zagore still stands – a refuge from the horrors outside.,Data/Scenario/Banters_Hub.lua(00019),Act0 02 Victor Enters Hub,,Victor Vran,Victor Vran,,,,扎古爾城仍聳立著，這座把恐懼隔絕於外的庇護所。,,OK,,
+2870,194283,Castle Zagore still stands – a refuge from the horrors outside.,Data/Scenario/Banters_Hub.lua(00019),Act0 02 Victor Enters Hub,,Victor Vran,Victor Vran,,,,扎古爾城仍聳立著，這座把恐怖隔絕於外的庇護所。,,OK,,
 2262,196015,"Welcome to Zagoravia, hunter! Thank you for answering our summons and bringing your sword to our cause.
 
 Soon we will push back the enemy. If you hurry you will be rewarded.",Data/Conversations/Tzarina.lua(00014),Act1 01 Queen initial conversation,,Queen Katarina,Queen Katarina,,,,"歡迎來到扎古拉維亞，獵人！感謝你回應我們的號召，與我們一起並肩作戰。
